improve action<->noise<->visual combos

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
             <a style="display:none;" href="auth.html" id="login">Sign in to play</a>
             <strong id="username"></strong> <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
-          My clicks: <span id="player-clicks">–</span>      <button class="help-button" id="player-clicks-explanation-btn">?</button><br>
+          <span id="player-clicks-text">My clicks:</span> <span id="player-clicks">–</span>      <button class="help-button" id="player-clicks-explanation-btn">?</button><br>
           My life-force: <span id="node-score-me">–</span>  <button class="help-button" id="node-score-me-explanation-btn">?</button><br>
           Common decay rate: <span id="decay-rate">–</span> <button class="help-button" id="decay-rate-explanation-btn">?</button><br>
           Common status: <span id="status">–</span>         <button class="help-button" id="status-explanation-btn">?</button><br>
