Use absolute references for js and css files

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,900' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <link rel="stylesheet" href="/css/normalize.min.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="js/vendor/d3-annotations.min.js"></script>
+  <script src="/js/vendor/d3-annotations.min.js"></script>
   <script defer src="/__/firebase/5.0.1/firebase-app.js"></script>
   <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
   <script defer src="/__/firebase/5.0.1/firebase-database.js"></script>
@@ -156,19 +156,19 @@
     </div> <!-- #main -->
   </div> <!-- #main-container -->
 
-  <script src="js/svgCreation.js"></script>
+  <script src="/js/svgCreation.js"></script>
   <!-- define all the html and then define interactivity -->
-  <script src="js/underscore-min.js"></script>
+  <script src="/js/underscore-min.js"></script>
   <!-- order matters: global imported first -->
-  <script src="js/globals.js"></script>
-  <script src="js/sounds.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/ui.js"></script>
-  <script src="js/db.js"></script>
-  <script src="js/action.js"></script>
-  <script src="js/scores.js"></script>
-  <script src="js/auth.js"></script>
-  <script src="js/login.js"></script>
-  <script src="js/commonplay.js"></script>
+  <script src="/js/globals.js"></script>
+  <script src="/js/sounds.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/ui.js"></script>
+  <script src="/js/db.js"></script>
+  <script src="/js/action.js"></script>
+  <script src="/js/scores.js"></script>
+  <script src="/js/auth.js"></script>
+  <script src="/js/login.js"></script>
+  <script src="/js/commonplay.js"></script>
 </body>
 </html>
