--- a/public/auth.html
+++ b/public/auth.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Common Authentication</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!-- *******************************************************************************************
        * TODO(DEVELOPER): Paste the initialization snippet from:
@@ -20,12 +20,12 @@
     <script defer src="/__/firebase/init.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
-    <script src="js/globals.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/util.js"></script>
-    <script src="js/scores.js"></script>
-    <script src="js/db.js"></script>
+    <script src="/js/globals.js"></script>
+    <script src="/js/auth.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/util.js"></script>
+    <script src="/js/scores.js"></script>
+    <script src="/js/db.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.css" />
   <script type="text/javascript">
