--- a/public/joinritualwin.html
+++ b/public/joinritualwin.html
@@ -57,9 +57,9 @@
             </div>
           </div>
         </div>
-     <script src="js/globals.js" type="text/javascript"></script>
-     <script src="js/db.js" type="text/javascript"></script>
-     <script src="js/joinritualwin.js" type="text/javascript"></script>
+     <script src="/js/globals.js" type="text/javascript"></script>
+     <script src="/js/db.js" type="text/javascript"></script>
+     <script src="/js/joinritualwin.js" type="text/javascript"></script>
 
   </body>
 
