--- a/public/joinritual.html
+++ b/public/joinritual.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>common joinritual</title>
+    <title>Common : Join ritual</title>
     <script src="/js/p5.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/css/joinritual.css">
     <meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=1.0, user-scalable=no">
