--- a/public/joinritualwin.html
+++ b/public/joinritualwin.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>common joinritual win</title>
+      <title>Common : Join ritual : Invite player</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/joinritualwin.css">
