new connection page makes sure that username and email exist

--- a/public/newconnection.html
+++ b/public/newconnection.html
@@ -48,7 +48,7 @@
               <div class="col-25">
               </div>
               <div class="col-75">
-                <input id="join" type="button" value="make connection">
+                <input id="connect" type="button" value="make connection">
                 <p id="submitting-msg" style="color: #45a049;"></p>
               </div>
             </div>
