comment out settings as I don't have time to set them up

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
         <div class="modalButtons">
           <button id="aboutBtn">About</button>
-          <button id="settingsBtn">Settings</button>
+          <!-- <button id="settingsBtn">Settings</button> -->
 
           <button id="add-player" type="button" value="add-player" onclick="window.open('joinritual.html')"> </button>
           <button id="add-link" type="button" value="add-link" onclick="window.open('addlink.html')"> </button>
