new connection icon and text

--- a/public/newconnection.html
+++ b/public/newconnection.html
@@ -16,7 +16,7 @@
     <body>
 
         <div class="container" id="newPlayerSignup">
-          <h2>Welcome to Common</h2>
+          <h2>Connect with another existing player</h2>
           <h3 id="common-you-are-connecting">&nbsp;</h3>
 
           <!-- On submit, send the form-data to X (to process the input): -->
@@ -28,7 +28,7 @@
               </div>
 
               <div class="col-75">
-                <input type="text" id="username" name="username" placeholder="existing player username here">
+                <input type="text" id="username" name="username" placeholder="Username of the <em>existing</em> player you want to connect with here">
                 <p id="username-error-msg" style="color: red;"></p>
               </div>
             </div>
@@ -39,7 +39,7 @@
               </div>
 
               <div class="col-75">
-                <input type="email" id="email" name="email" placeholder="existing player email here">
+                <input type="email" id="email" name="email" placeholder="Email of the <em>existing</em> player you want to connect with here">
                 <p id="email-error-msg" style="color: red;"></p>
               </div>
             </div>
