--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
           <!-- <button id="settingsBtn">Settings</button> -->
 
           <button id="add-player" type="button" value="add-player" onclick="window.open('joinritual.html')"> </button>
-          <button id="add-link" type="button" value="add-link" onclick="window.open('addlink.html')"> </button>
+          <button id="add-link" type="button" value="add-link" onclick="window.open('newconnection.html')"> </button>
         </div>
 
         <div class="adminButtons">
