--- a/public/newconnection.html
+++ b/public/newconnection.html
@@ -35,7 +35,7 @@
 
             <div class="row">
               <div class="col-25">
-                <label id="emailLabel" for="email">email</label>
+                <label id="emailLabel" for="email">email</label>i
               </div>
 
               <div class="col-75">
