--- a/public/newconnection.html
+++ b/public/newconnection.html
@@ -16,7 +16,7 @@
     <body>
 
         <div class="container" id="newPlayerSignup">
-          <h2>Connect with another existing player</h2>
+          <h2>Connect with an existing player</h2>
           <h3 id="common-you-are-connecting">&nbsp;</h3>
 
           <!-- On submit, send the form-data to X (to process the input): -->
@@ -28,18 +28,18 @@
               </div>
 
               <div class="col-75">
-                <input type="text" id="username" name="username" placeholder="Username of the <em>existing</em> player you want to connect with here">
+                <input type="text" id="username" name="username" placeholder="Username of the existing player">
                 <p id="username-error-msg" style="color: red;"></p>
               </div>
             </div>
 
             <div class="row">
               <div class="col-25">
-                <label id="emailLabel" for="email">email</label>i
+                <label id="emailLabel" for="email">email</label>
               </div>
 
               <div class="col-75">
-                <input type="email" id="email" name="email" placeholder="Email of the <em>existing</em> player you want to connect with here">
+                <input type="email" id="email" name="email" placeholder="Email of the existing player">
                 <p id="email-error-msg" style="color: red;"></p>
               </div>
             </div>
