--- a/public/newconnection.html
+++ b/public/newconnection.html
@@ -49,7 +49,7 @@
               </div>
               <div class="col-75">
                 <input id="connect" type="button" value="make connection">
-                <p id="submitting-msg" style="color: #45a049;"></p>
+                <p id="submitting-msg" style="color: #49fb35;"></p>
               </div>
             </div>
             <div class="row">
