--- a/public/index.html
+++ b/public/index.html
@@ -119,23 +119,26 @@
         <div id="player-clicks-explanation" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
-             <h1>My clicks</h1>
-             <p>You have a limited amount of clicks you can use. Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. Clicks regenerate over time.</p>
+             <!-- <h1>My clicks</h1> -->
+             <p>You have a limited amount of clicks you can use. </p>
+             <p>Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players.</p>
+             <p>Clicks regenerate over time.</p>
           </div>
         </div>
 
         <div id="node-score-me-explanation" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
-             <h1>My life-force</h1>
-             <p>Through the relentless pressure of time and the natural decay of the universe, you will lose life-force. Want it back? Life force is generated through reinforcing connections, building new connections with existing memebers, and inviting new players to your Common. </p>
+             <!-- <h1>My life-force</h1> -->
+             <p>Through the relentless pressure of time and the natural decay of the universe, you will lose life-force.</p>
+             <p>Want it back? Life force is generated through reinforcing connections, building new connections with existing members, and inviting new players to your Common. </p>
           </div>
         </div>
 
         <div id="decay-rate-explanation" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
-             <h1>Common decay rate</h1>
+             <!-- <h1>Common decay rate</h1> -->
              <p>The Common decay rate is related to the activity of the members. Forgotten Commons will decay quickly, disintegrating into the nothingness that awaits us all.</p>
           </div>
         </div>
@@ -143,8 +146,8 @@
         <div id="status-explanation" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
-             <h1>Common status</h1>
-             <p>Common status is where all things are known to you. Below is a feed of all the events happening over time.</p>
+             <!-- <h1>Common status</h1> -->
+             <p>Common status is where all things are known to you.</p> <p>Below is a feed of all the events happening over time.</p>
           </div>
         </div>
 
