shrink annotation to match

--- a/public/auth.html
+++ b/public/auth.html
@@ -47,7 +47,7 @@
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
     <h1>Please sign in to Common</h1>
-    <h2>You were emailed a temporary password when you were invited.<br>Use that email address and password to sign in.</h2>
+    <p>You were emailed a temporary password when you were invited.<br>Use that email address and password to sign in.</p>
     <div id="firebaseui-auth-container"></div>
   </body>
 </html>
