login style and fix form field incorrect colour

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
           <p class="login-elements">
             <span id="loading-indicator">Loading …</span>
             <a style="display:none;" href="auth.html" id="login">Sign in to play</a>
-            <span id="username"></span> <a style="display:none;" href="/" id="logout">Log out</a>
+            <span id="username" class="commonUsername"></span> <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
           <span id="player-clicks-text">My clicks:</span> <span id="player-clicks">–</span>      <button class="help-button" id="player-clicks-explanation-btn">?</button><br>
           My life-force: <span id="node-score-me">–</span>  <button class="help-button" id="node-score-me-explanation-btn">?</button><br>
