--- a/public/index.html
+++ b/public/index.html
@@ -82,13 +82,14 @@
          <div class="modal-content">
            <span class="close">&times;</span>
              <h2>How to Join</h2>
-             <p>The only way to join is to be invited, in person, by an active player. Here's a <a href="http://commonplay.ca/schedule.html">schedule</a>. You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
+             <p>The only way to join is to be invited, in person, by an active player. <!-- Here's a <a href="http://commonplay.ca/schedule.html">schedule</a>. --> You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
              <h2>What to do</h2>
-             <p>If you are an active player, there are 3 things you can do here:</p>
+             <p>If you are an active player, there are 4 things you can do here:</p>
              <ol>
-               <li>Invite new players</li>
+               <li>Invite new players to connect with you</li>
+               <li>Invite existing players to connect with you</li>
                <li>Strengthen your connections</li>
-               <li>Do nothing and watch your connections dwindle away</li>
+               <li>Do nothing and watch your common slowly unmake itself</li>
              </ol>
           </div>
         </div>
