Incorporate connor's wave code

--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,7 @@
   <script src="/js/globals.js"></script>
   <script src="/js/sounds.js"></script>
   <script src="/js/util.js"></script>
+  <script src="/js/waves.js"></script>
   <script src="/js/ui.js"></script>
   <script src="/js/db.js"></script>
   <script src="/js/action.js"></script>
