update new player form

--- a/public/joinritualwin.html
+++ b/public/joinritualwin.html
@@ -28,7 +28,7 @@
               </div>
 
               <div class="col-75">
-                <input type="text" id="username" name="username" placeholder="new player username here">
+                <input type="text" id="username" name="username" placeholder="new player username">
                 <p id="username-error-msg" style="color: red;"></p>
               </div>
             </div>
@@ -39,7 +39,7 @@
               </div>
 
               <div class="col-75">
-                <input type="email" id="email" name="email" placeholder="new player email here">
+                <input type="email" id="email" name="email" placeholder="new player email">
                 <p id="email-error-msg" style="color: red;"></p>
               </div>
             </div>
