attempts to get the line to dissapear and form formatting

--- a/public/joinritualwin.html
+++ b/public/joinritualwin.html
@@ -49,7 +49,7 @@
               </div>
               <div class="col-75">
                 <input id="join" type="button" value="make connection">
-                <p id="submitting-msg" style="color: #49fb35;"></p>
+                <p id="submitting-msg" style="color: magenta;"></p>
               </div>
             </div>
             <div class="row">
