--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,8 @@
           <div id="toggleDebug">
             <button id="destroy">Destroyer</button>
             <button id="snapshot" class="control-button">Take Snapshot</button>
-            # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
-            <input id="reinitialize" type="button" value="reinitialize"><br>
+            # people: <span id="nodecount">0</span><br>
+            # connections: <span id="edgecount">0</span>
             Each Common: <br>
             <ul id="network-score"></ul><br>
           </div>
