add error sound and block to new players and connections if player doesn't have clicks

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
           <button id="aboutBtn">About</button>
           <!-- <button id="settingsBtn">Settings</button> -->
 
-          <button id="add-player" type="button" value="add-player" onclick="window.open('joinritual.html')"> </button>
-          <button id="add-link" type="button" value="add-link" onclick="window.open('newconnection.html')"> </button>
+          <button id="add-player" type="button" value="add-player" href="joinritual.html"> </button>
+          <button id="add-link" type="button" value="add-link" href="newconnection.html"> </button>
         </div>
 
         <div class="adminButtons">
