--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,10 @@
         <div id="aboutModal" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
+             <h2>What is Common</h2>
+             <p>Common is a play experience for communities and is part of <a href="https://www.cafka.org/">CAFKA.18</a>
              <h2>How to Join</h2>
-             <p>The only way to join is to be invited, in person, by an active player. <!-- Here's a <a href="http://commonplay.ca/schedule.html">schedule</a>. --> You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
+             <p>The only way to join is to be invited, in person, by an active player. <!-- Here's a <a href="http://commonplay.ca/schedule.html">schedule</a>. --> If you don't know any active players, you can come find Marie Claire LeBlanc Flanagan <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here.</a>&nbsp</p>
              <h2>What to do</h2>
              <p>If you are an active player, there are 3 things you can do here:</p>
              <ol>
