--- a/public/index.html
+++ b/public/index.html
@@ -81,12 +81,11 @@
         <div id="aboutModal" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
-             <h2>What is Common</h2>
-             <p>Common is a play experience for communities and is part of <a href="https://www.cafka.org/">CAFKA.18</a>
-             <h2>How to Join</h2>
-             <p>The only way to join is to be invited, in person, by an active player. <!-- Here's a <a href="http://commonplay.ca/schedule.html">schedule</a>. --> If you don't know any active players, you can come find Marie Claire LeBlanc Flanagan <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here.</a>&nbsp</p>
+             <p>Common is a play experience for communities and is part of <a href="https://www.cafka.org/">CAFKA.18</a></p>
+             <h2>Join</h2>
+             <p>Join by connecting with an active player. Or <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default/">find</a> Marie Claire LeBlanc Flanagan? Marie will be travelling around Waterloo Region. Scheduled dates will be posted <a href="http://commonplay.ca/schedule.html">here.</a>&nbsp </p>
              <h2>What to do</h2>
-             <p>If you are an active player, there are 3 things you can do here:</p>
+             <p>If you are an active player and you have clicks to use there are 3 things you can do here:</p>
              <ol>
                <li>Invite new or existing players to connect with you</li>
                <li>Strengthen your connections</li>
