--- a/public/index.html
+++ b/public/index.html
@@ -81,9 +81,10 @@
         <div id="aboutModal" class="modal">
          <div class="modal-content">
            <span class="close">&times;</span>
-             <p>Common is a play experience for communities and is part of <a href="https://www.cafka.org/">CAFKA.18</a></p>
+             <p>Common is a play experience for communities and is part of <a href="https://www.cafka.org/"target="_blank">CAFKA.18</a></p>
              <h2>Join</h2>
-             <p>Join by connecting with an active player. Or <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default/">find</a> Marie Claire LeBlanc Flanagan? Marie will be travelling around Waterloo Region. Scheduled dates will be posted <a href="http://commonplay.ca/schedule.html">here.</a>&nbsp </p>
+             <p>Join by connecting with an active player.<p>
+               <p>Or <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default/" target="_blank">find</a> Marie Claire LeBlanc Flanagan. Marie will be travelling around Waterloo Region. Scheduled dates will be posted <a href="http://commonplay.ca/schedule.html" target="_blank">here.</a>&nbsp </p>
              <h2>What to do</h2>
              <p>If you are an active player and you have clicks to use there are 3 things you can do here:</p>
              <ol>
@@ -91,6 +92,8 @@
                <li>Strengthen your connections</li>
                <li>Do nothing and watch your common unmake itself</li>
              </ol>
+             <h2>Contact</h2>
+             <p>Please send poems and questions to <a href="mailto:marieflanagan+common@gmail.com" target="_blank">MCLF</a>. The Common of Common are <a href="/credits.html" target="_blank">here.</a></p>
           </div>
         </div>
 
@@ -121,8 +124,8 @@
          <div class="modal-content">
            <span class="close">&times;</span>
              <!-- <h1>My clicks</h1> -->
-             <p>You have a limited amount of clicks you can use. </p>
-             <p>Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players.</p>
+             <p>You have a limited amount of clicks. </p>
+             <p>Use your clicks to grow and strengthen your Common.</p>
              <p>Clicks regenerate over time.</p>
           </div>
         </div>
@@ -131,8 +134,8 @@
          <div class="modal-content">
            <span class="close">&times;</span>
              <!-- <h1>My life-force</h1> -->
-             <p>Through the relentless pressure of time and the natural decay of the universe, you will lose life-force.</p>
-             <p>Want it back? Life force is generated through reinforcing connections, building new connections with existing members, and inviting new players to your Common. </p>
+             <p>You already know about the relentless pressure of time, erosion, and decay. </p>
+             <p>Use your clicks wisely. </p>
           </div>
         </div>
 
@@ -140,7 +143,8 @@
          <div class="modal-content">
            <span class="close">&times;</span>
              <!-- <h1>Common decay rate</h1> -->
-             <p>The Common decay rate is related to the activity of the members. Forgotten Commons will decay quickly, disintegrating into the nothingness that awaits us all.</p>
+             <p>Related to the activity of the members of a Common.</p>
+             <p>Forgotten Commons will decay quickly, disintegrating into the nothingness that awaits us all.</p>
           </div>
         </div>
 
@@ -148,7 +152,7 @@
          <div class="modal-content">
            <span class="close">&times;</span>
              <!-- <h1>Common status</h1> -->
-             <p>Common status is where all things are known to you.</p> <p>Below is a feed of all the events happening over time.</p>
+             <p>Where finally, all things in your Common are known to you.</p>
           </div>
         </div>
 
