--- a/public/credits.html
+++ b/public/credits.html
@@ -20,8 +20,9 @@
       	<li>Adam Streck</li>
       	<li>Aileen House</li>
       	<li>Albert Alexander</li>
+        <li>Andres Cuervo</li>
       	<li>Amar Shah</li>
-      	<li>Baris</li>
+      	<li>Baris Bilgen</li>
       	<li>Brie Code</li>
       	<li>Claudio Sampaio</li>
       	<li>Colleen LeBlanc Flanagan</li>
@@ -29,9 +30,11 @@
       	<li>Colin Parsons</li>
       	<li>Connor Bell</li>
       	<li>Christian Kokott</li>
+        <li>David Dynerman</li>
       	<li>David H</li>
       	<li>Dorice Tepley</li>
       	<li>Ed Ashton</li>
+        <li>Ellen Flanagan</li>
       	<li>Enric Llagostera</li>
       	<li>Eiríkr Åsheim</li>
       	<li>Eric Rubin</li>
@@ -42,6 +45,7 @@
       	<li>Gemma Leslie</li>
       	<li>Gordon Hatt</li>
         <li>Heather Kelley</li>
+        <li>Henry Smith</li>
       	<li>Holly</li>
       	<li>Hugh D. A. Goldring</li>
         <li>Ida toft</li>
@@ -57,6 +61,7 @@
       	<li>Jury Rossetti</li>
       	<li>CAFKA</li>
       	<li>Kat Dornian</li>
+        <li>Kay Dyson Tam</li>
       	<li>Kristina Taylor, Jay Taylor, Civic Tech WR</li>
         <li>Liane Décary-Chen</li>
       	<li>Linsey</li>
@@ -65,6 +70,7 @@
         <li>Lynn Hughes</li>
       	<li>MADE</li>
       	<li>Mailis Rodrigues</li>
+        <li>Martin Mathiesen Kvale</li>
       	<li>Mariam Zakarian</li>
         <li>Martina Flanagan</li>
         <li>Mike Bostock & D3</li>
@@ -77,6 +83,7 @@
       	<li>Nomi</li>
       	<li>Norna Ross</li>
       	<li>Owen Pallett</li>
+        <li>Paloma Dawkins</li>
         <li>Pippin Barr</li>
       	<li>Rachel</li>
       	<li>Rahul Jethwani</li>
@@ -96,6 +103,7 @@
       	<li>Troy</li>
       	<li>Yaxi Zhao</li>
       	<li>Yoshi</li>
+        <li>Yx Zh</li>
       	<li>scribblegrl</li>
       </ul>
 
