Remove ui dependency in util

--- a/public/auth.html
+++ b/public/auth.html
@@ -32,7 +32,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       var ui = importUi();
       var scores = importScores();
-      var util = importUtil(scores, ui);
+      var util = importUtil(scores);
       var dbModule = importDb(util, firebase);
       var commonAuth = importAuth(firebase, dbModule);
 
