less destroyer more clicks

--- a/public/schedule.html
+++ b/public/schedule.html
@@ -13,9 +13,9 @@
     	<li>Wednesday June 6, 2018: Kitchener City Hall 11am-1pm</li>
     	<li>Thursday June 7, 2018: The Adventurers Guild 8pm-9pm</li>
     	<li>Friday June 8, 2018: Cafe Pyrus 3pm-5pm</li>
-    	<li>Saturday June 9, 2018: THEMUSEUM 1-3pm</li>
+    	<li>Saturday June 9, 2018: THEMUSEUM 11am-1pm</li>
     	<li>Sunday June 10, 2018: The Yeti 11am-1pm</li>
-    	<li>Monday June 11, 2018: Kitchener City Hall 11pm-1pm</li>
+    	<li>Monday June 11, 2018: Matter of Taste 5pm-7pm</li>
     	<li>Tuesday June 12, 2018: Kwartzlab 7pm-10pm</li>
     	<li>Wednesday June 13, 2018: Idea Exchange 11am-1pm</li>
     	<li>Friday June 15, 2018: Tame the Lane 4pm-7pm</li>
