colours and text

--- a/public/joinritualwin.html
+++ b/public/joinritualwin.html
@@ -24,7 +24,7 @@
 
             <div class="row">
               <div class="col-25">
-                <label id="usernameLabel" for="username">username</label>
+                <label id="usernameLabel" for="username">Name</label>
               </div>
 
               <div class="col-75">
